[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/novem___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/sound_settings.gd" type="Script" id=2]
[ext_resource path="res://scripts/music_slider.gd" type="Script" id=3]
[ext_resource path="res://art/HUD assets/character_selection_panel.png" type="Texture" id=4]
[ext_resource path="res://art/HUD assets/pause_panel_button.png" type="Texture" id=5]
[ext_resource path="res://art/HUD assets/pause_panel_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://art/HUD assets/slider_tick.png" type="Texture" id=7]
[ext_resource path="res://art/HUD assets/slider_tick_highlighted.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 98, 137 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="sound_settings" type="Panel"]
margin_left = 326.0
margin_top = 165.0
margin_right = 657.0
margin_bottom = 437.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 53.0
margin_top = 61.0
margin_right = 277.0
margin_bottom = 233.0
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
self_modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
margin_left = 21.0
margin_right = 203.0
margin_bottom = 27.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "SOUND SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 224.0
margin_bottom = 119.0
size_flags_vertical = 3
custom_constants/vseparation = 41
custom_constants/hseparation = 9
columns = 2

[node name="Music" type="Label" parent="VBoxContainer/GridContainer"]
self_modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
margin_right = 40.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_slider" type="HSlider" parent="VBoxContainer/GridContainer" groups=[
"persist",
]]
margin_left = 49.0
margin_right = 224.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 7 )
max_value = 30.0
value = 18.0
tick_count = 10
ticks_on_borders = true
script = ExtResource( 3 )

[node name="SFX" type="Label" parent="VBoxContainer/GridContainer"]
self_modulate = Color( 0.592157, 0.580392, 0.580392, 1 )
margin_top = 57.0
margin_right = 40.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 4 )
text = "	SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_slider" type="HSlider" parent="VBoxContainer/GridContainer" groups=[
"persist",
]]
margin_left = 49.0
margin_top = 57.0
margin_right = 224.0
margin_bottom = 73.0
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 7 )
max_value = 30.0
value = 18.0
tick_count = 10
ticks_on_borders = true
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 224.0
margin_bottom = 172.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 132.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="back_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 224.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/back_button"]
self_modulate = Color( 0.572549, 0.572549, 0.572549, 1 )
margin_top = 6.0
margin_right = 87.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 5 )
text = "GO BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="VBoxContainer/GridContainer/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/back_button" to="." method="_on_back_button_pressed"]
